# klasno

./: .env.example  .gitignore  ARCHITECTURE.md  KLASNO_TASK_ROADMAP.md  KLaSNo.code-workspace  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  ci.yml
docs/: data-dictionary.md
docs/adr/: 0001-modular-monolith-shared-schema.md  0002-migrate-existing-gcp-pipeline.md
docs/runbooks/: README.md  cloud-run-transform.md
infra/envs/dev/: README.md
infra/envs/prod/: README.md
infra/envs/staging/: README.md
infra/modules/: README.md
services/api/: README.md
services/api/alembic/: README.md
services/api/app/core/: README.md
services/api/app/models/: README.md
services/api/tests/: README.md
services/ingestion/: README.md
services/ingestion/fitbit_sync/: Dockerfile  README.md  app.py  requirements.txt
services/ingestion/jobs/: README.md
services/ingestion/legacy_reference/: README.md  health_transform_to_bq.py  submit_all_health_jobs.sh
services/ingestion/tests/: test_transform_bigquery_client.py  test_transform_file_selection.py  test_transform_gcs_client.py  test_transform_metrics.py  test_transform_parser.py  test_transform_sleep.py
services/ingestion/transform/: Dockerfile  README.md  __init__.py  apply_schemas.py  bigquery_client.py  bigquery_sql.py  file_selection.py  gcs_client.py  job.py  metrics.py  models.py  parser.py  requirements.txt  sleep.py  table_routing.py
services/ingestion/transform/schemas/: control_table.sql  metric_points.sql  sleep_sessions.sql  (+3 more)
services/llm/: README.md
web/src/: README.md
(+5 files in other folders)
