[project]
name = "klasno"
version = "0.1.0"
description = "Student wellness and academic intelligence platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[tool.uv]
package = false

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["services/api/tests", "services/ingestion/tests"]
